Fixed fr the utilty container on mobile

--- a/front/src/components/Navbar.css
+++ b/front/src/components/Navbar.css
@@ -209,9 +209,12 @@ body.dark .navbar {
   transition: all 0.3s ease-out;
 }
 
-.utility_container:hover {
-  right: calc(-20rem + 14rem);
-  transition: all 0.2s ease-out;
+/* If on desktop*/
+@media screen and (min-width: 960px) {
+  .utility_container:hover {
+    right: calc(-20rem + 14rem);
+    transition: all 0.2s ease-out;
+  }
 }
 
 /* If on mobile*/
